# ray_tracer

./: .gitignore  CMakeLists.txt  README.md
combination/: dragons_and_spheres.xml  geometry.xml  geometry_ortho.xml
scene/: geometry_spheres.xml  proj_04_spheres_depth.xml  scene_05.xml  scene_07.xml  scene_08.xml  scene_09.xml
scene/teapot_scene/: teapot_geometry.xml  teapot_materials.xml  teapot_scene.xml
scene/three_spheres/: geometry.xml  materials.xml  spheres.xml  three_sphere.xml
scenes/: 01_basic_2_spheres.xml  01_basic_2_spheres_geometry.xml  03_dinning_chair.xml  03_dinning_set.xml  03_dinning_set_geometry.xml  03_dinning_table.xml
scenes/lights_scene/: bphong_scene_main.xml  geometry_ambient.xml  geometry_directional.xml  geometry_light_combination.xml  geometry_point.xml  geometry_spot.xml  spheres.xml
scenes/specular_mirror_scene/: main_strip_of_spheres.xml  strip_materials.xml  strip_objects.xml  strip_scene_1_geometry.xml  strip_scene_2_geometry.xml
src/api/: api.cpp  api.h  api_factory.cpp  graphics_managers.cpp  graphics_managers.h  object_manager.cpp  object_manager.h
src/cameras/: orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
src/core/: background.cpp  background.h  bounds.cpp  bounds.h  camera.cpp  camera.h  color.cpp  color.h  error.cpp  error.h  film.cpp  film.h  image_io.cpp  integrator.cpp  integrator.h  light.h  material.h  math_base.h  math_types.h  matrix.cpp  matrix.h  paramset.h  parser.cpp  parser.h  primitive.cpp  primitive.h  rt3-base.h  rt3.h  scene.cpp  scene.h  screen_window.h  shape.h  surfel.h  (+2 more)
(+29 files in other folders)
